--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap"
       rel="stylesheet"
     />
-    <title>Where in the world?</title>
+    <title>Wiki Countries</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
